--- a/style.css
+++ b/style.css
@@ -21,14 +21,23 @@ body {
     text-align: center;
     padding-top: 1rem ;
 }
-.caixa-input {
- 
+.caixa-input { 
     margin-left: 10px;
 }
 
+label {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
 input {
-    width: 80%;
+    width: 60%;
     padding: 5px;
+    
+}
+
+#peso {
+    margin-left: 7px;
 }
 
 .botao-calcular {
@@ -36,6 +45,7 @@ input {
     padding: 8px;
     margin-top: 2rem;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .botao-calcular:hover {
@@ -44,20 +54,26 @@ input {
 }
 
 .caixa-resultado {
+    display: flex;
+    align-items: top;
+    column-gap: 1rem;
     margin: 2rem;
 }
 
 
 .resultado {
-    width: 80%;
-    margin: 0 auto;
+    max-width: 10em;
+    height: 1.875rem;    
     background-color: white;
     color: black;
     font-size: 1.5rem;
-
+    border-radius: 5px;
 }
 
-.caixa-imagem {
-    margin-top: 1rem;
+.seu-imc {
+    font-size: 1.2rem;
+    font-weight: bold;
+    height: 1.875rem;
 }
+
 
